--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </head>
@@ -55,19 +56,13 @@
       <table class="table table-striped">
         <thead>
         <tr>
+            <th>Id</th>
+            <th>Title</th>
             <th>Price</th>
-            <th>PublicationDate</th>
+            <th>Publication Date</th>
             <th>Latitude</th>
             <th>Longitude</th>
-            <th>Region</th>
-            <th>Building Type</th>
-            <th>Floor</th>
-            <th>Total Floor</th>
-            <th>Rooms</th>
-            <th>Area</th>
-            <th>Object Type</th>
-            <th>Id</th>
-            <th>Photo</th>
+            <th>File</th>
             <th>Action</th>
         </tr>
         </thead>
@@ -107,7 +102,7 @@
 
     <script>
       function dropUser(id){
-        fetch(`https://localhost:7265/api/Houses/Delete/${id}`, {
+        fetch(`http://localhost:5195/api/House/Delete?id=${id}`, {
           method: "DELETE"
         });  
 
